--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
   implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
 // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
   implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.15.Final'
+  // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+  implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+
 
 
 }
